plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.deploydesexta'
version = '0.0.1-SNAPSHOT'

compileJava {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all { jvmArgs += '--enable-preview' }

tasks.withType(JavaCompile).all {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.google.guava:guava:32.1.3-jre'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
